# akemi

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  LICENSE  README.md  llms.txt  package.json
.github/: copilot-instructions.md
.github/scripts/: release_notes.py
.github/workflows/: release.yml
src/python/: pyproject.toml
src/python/akemi/: __main__.py  bootstrap.py  cli.py  config.py  detector.py  graph.py  healer.py  id_gen.py  index_builder.py  node.py  paths.py  scanner.py  sync_claude.py  validator.py  view_generator.py  yaml_io.py
src/scripts/: bootstrap.cmd  bootstrap.sh  heal.cmd  heal.sh  install.py  install.sh  rebuild-index.cmd  rebuild-index.sh  rebuild-views.cmd  rebuild-views.sh  sync-claude.cmd  sync-claude.sh  upgrade.sh  validate.cmd  validate.sh
src/skeleton/: akemi.yaml
src/skeleton/agents/claude/: CLAUDE.md
src/skeleton/graph/: index.yaml
src/skeleton/graph/views/: api-surface.md  architecture.md  backlog.md  dependency-tree.md  tech-stack.md  test-coverage.md
src/skeleton/guidelines/: ai-friendly.md  coding-standards.md  documentation-standards.md  graph-maintenance.md  safe-scrum.md  testing-standards.md
src/skeleton/journeys/: SCHEMA.md
src/skeleton/runs/: SCHEMA.md
src/skeleton/templates/: journey-template.yaml  run-template.yaml
src/skeleton/templates/node/: adr.yaml  api.yaml  bug.yaml  capability.yaml  class.yaml  config.yaml  doc.yaml  domain.yaml  epic.yaml  feature.yaml  file.yaml  function.yaml  interface.yaml  iteration.yaml  module.yaml  objective.yaml  pi.yaml  (+6 more)
(+28 files in other folders)
